# haskell-meta-semantics

./: LICENSE  haskell-meta-semantics.cabal
.github/workflows/: haskell.yml
icfp25-artifact/: LICENSE  README.md  ho-gsos-artifact.cabal
icfp25-artifact/src/: Behaviour.hs  Benchmarks.hs  BigStep.hs  Examples.hs  HOGSOS.hs  Main.hs  README.md  Separable.hs  Syntax.hs  Tests.hs  Utils.hs
src/: Behaviour.hs  Benchmark.hs  Benchmarks.hs  BigStep.hs  Examples.hs  HOGSOS.hs  README.md  Separable.hs  Syntax.hs
