cabal-version:       3.0
name:                haskell-meta-semantics
version:             0.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- copyright:
-- category:

tested-with:         GHC >= 9.4

library
  hs-source-dirs:      src
  exposed-modules:     BigStep
  other-modules:       Behaviour, HOGSOS, Separable, Syntax, Examples, Utils
  default-extensions:  InstanceSigs, FlexibleInstances, DeriveFunctor, TypeSynonymInstances, MultiParamTypeClasses, TypeApplications, ScopedTypeVariables, FlexibleContexts, UndecidableInstances, TypeFamilies
  build-depends:       base >= 4.12.0.0 && < 5
  default-language:    Haskell2010

