cabal-version:       3.0
name:                haskell-meta-semantics
version:             0.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- copyright:
-- category:

tested-with:         GHC >= 9.4

library
  hs-source-dirs:      src
  exposed-modules:     BigStep, Behaviour, HOGSOS, Separable, Syntax, Examples
  other-modules:       Utils
  default-extensions:  InstanceSigs, FlexibleInstances, DeriveFunctor, TypeSynonymInstances, MultiParamTypeClasses, TypeApplications, ScopedTypeVariables, FlexibleContexts, UndecidableInstances, TypeFamilies
  build-depends:       base >= 4.12.0.0 && < 5
  default-language:    Haskell2010

executable benchmarks
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Behaviour, BigStep, Examples, HOGSOS, Separable, Syntax, Utils, Benchmarks
  default-extensions:  InstanceSigs, FlexibleInstances, DeriveFunctor, TypeSynonymInstances, MultiParamTypeClasses, TypeApplications, ScopedTypeVariables, FlexibleContexts, UndecidableInstances, TypeFamilies
  build-depends:       base >= 4.12.0.0 && < 5
  default-language:    Haskell2010