cabal-version:       3.0
name:                ho-gsos-artifact
version:             0.0.0

tested-with:         GHC >= 9.4

library
  hs-source-dirs:      src
  exposed-modules:     BigStep, Behaviour, HOGSOS, Separable, Syntax, Examples
  other-modules:       Utils
  default-extensions:  InstanceSigs, FlexibleInstances, DeriveFunctor, MultiParamTypeClasses, TypeApplications, ScopedTypeVariables
  build-depends:       base >= 4.12.0.0 && < 5
  default-language:    Haskell2010

executable tests
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Behaviour, BigStep, Examples, HOGSOS, Separable, Syntax, Utils, Tests
  default-extensions:  InstanceSigs, FlexibleInstances, DeriveFunctor, MultiParamTypeClasses, TypeApplications, ScopedTypeVariables
  build-depends:       base >= 4.12.0.0 && < 5
  default-language:    Haskell2010